<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_delivery_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_completed_jobs"
            android:icon="@drawable/ic_delivery"
            android:title="@string/delivered" />
        <item
            android:id="@+id/nav_biometric_enroll"
            android:icon="@drawable/ic_fingerprint_black_24dp"
            android:title="@string/biometric_enroll" />
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_checkin"
            android:title="@string/checkin" />
    </group>

</menu>