<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deliverActionsParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryActionsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/deliverActionsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/basicDetailsLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintTop_toBottomOf="@+id/deliveryPreferedTimeOfTheDay">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tVDeliveryCustomerEmirate"
                style="@style/AppTheme.SeconderyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="5dp"
                android:text="Customer Emirate"
                app:layout_constraintEnd_toStartOf="@+id/tVDeliveryReceiptDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tVDeliveryReceiptDate"
                style="@style/AppTheme.SeconderyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_calender"
                android:drawablePadding="5dp"
                android:text="10 Jan 2018"
                app:layout_constraintEnd_toStartOf="@+id/tVDeliveryReceipt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tVDeliveryCustomerEmirate" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tVDeliveryReceipt"
                style="@style/AppTheme.SeconderyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_receipt"
                android:drawablePadding="5dp"
                android:text="Receipt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tVDeliveryReceiptDate" />
        </android.support.constraint.ConstraintLayout>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tVDeliveryCustomerName"
            style="@style/AppTheme.SeconderyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_customer_avatar"
            android:drawablePadding="5dp"
            android:text="Customer Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/basicDetailsLinear" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tVDeliveryCustomerAddress"
            style="@style/AppTheme.SeconderyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="5dp"
            android:text="Customer Address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/tVDeliveryCustomerPhone" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tVDeliveryCustomerPhone"
            style="@style/AppTheme.SeconderyTextView"
            android:layout_width="285dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dp"
            android:text="Customer Phone"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/tVDeliveryCustomerName" />


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basicDetailsLinear">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tVDeliveryDateWidgetMonth"
                style="@style/AppTheme.month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calender_trim"
                android:gravity="center"
                android:padding="10dp"
                android:singleLine="true"
                android:text="Oct 2018"
                app:layout_constraintEnd_toEndOf="@+id/tVDeliveryDateWidgetDate"
                app:layout_constraintStart_toStartOf="@+id/tVDeliveryDateWidgetDate"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tVDeliveryDateWidgetDate"
                style="@style/AppTheme.date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/calender_body"
                android:gravity="center"
                android:padding="10dp"
                android:text="31"
                app:layout_constraintTop_toBottomOf="@id/tVDeliveryDateWidgetMonth"
                tools:layout_editor_absoluteX="8dp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <!--

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/timeButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deliveryPreferedTimeOfTheDay">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/morningButton"
                style="@style/AppTheme.NoPaddingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Morning" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/noonButton"
                style="@style/AppTheme.NoPaddingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Noon" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/eviningButton"
                style="@style/AppTheme.NoPaddingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Evining" />

        </android.support.v7.widget.LinearLayoutCompat>
-->


        <me.bendik.simplerangeview.SimpleRangeView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/deliveryPreferedTimeOfTheDay"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            app:activeLabelColor="@color/cast_expanded_controller_background_color"
            app:activeThumbLabelColor="@color/cast_expanded_controller_background_color"
            app:activeTickColor="@color/cast_expanded_controller_background_color"
            app:count="4"
            app:end="0"
            app:fixedTickColor="@color/cast_expanded_controller_background_color"
            app:labelFontSize="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:movable="false"
            app:showActiveTicks="true"
            app:showFixedTicks="true"
            app:showLabels="true"
            app:showTicks="true"
            app:start="0"
            app:tickRadius="3dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tVDeliveryCustomerRemark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_remark"
            android:drawablePadding="5dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <ListView
            android:id="@+id/listViewItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVDeliveryCustomerRemark" />

    </android.support.constraint.ConstraintLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/customerContactMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:menu_labels_position="right"
        fab:menu_fab_label="@string/actions"
        fab:menu_icon="@drawable/ic_address_book_bw"
        fab:menu_labels_ellipsize="end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/bCallCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_customer_avatar"
            fab:fab_colorNormal="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
            app:fab_colorPressed="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color_dark"
            fab:fab_label="@string/call_customer" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/bCallCustomerCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_customer_care"
            fab:fab_colorNormal="@color/appFabButton"
            app:fab_colorPressed="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color_dark"
            fab:fab_label="@string/call_customer_service" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/bCallCustomerLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            app:fab_colorNormal="@color/color_safe"
            app:fab_colorPressed="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color_dark"
            fab:fab_label="@string/go_to_customer_location" />
    </com.github.clans.fab.FloatingActionMenu>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/deliveryActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        fab:menu_fab_label="@string/actions">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/bDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_accept"
            fab:fab_colorNormal="@color/successAccent"
            fab:fab_label="@string/delivered" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/bDeliveryRejected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reject"
            fab:fab_colorNormal="@color/errorAccent"
            fab:fab_label="@string/rejected"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/bDeliveryReschedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reschedule"
            fab:fab_label="@string/reschedule"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>